--- a/greet/user/etc/user-api.yaml
+++ b/greet/user/etc/user-api.yaml
@@ -1,3 +1,6 @@
 Name: user-api
 Host: 0.0.0.0
 Port: 8888
+
+Mysql:
+  DataSource: root:a88888888@tcp(sddphp.cn:19906)/gozero?charset=utf8mb4&parseTime=true&loc=Asia%2FShanghai
